Fix translations for static pages

--- a/locale/en.json
+++ b/locale/en.json
@@ -18,7 +18,7 @@
       "avid_learner": "Avid learner",
       "tennis_player": "Tennis player"
     },
-    "summary": "Hello there! My name is <bold>Jacobo Jaramillo</bold>, an Electronic Engineer turned Software Developer. I went to Germany in 2017 to study a MSc. in Electrical Engineering and IT, and stayed until 2021, when I came back to my home country, Colombia. I have been working in software development in the areas of IoT, Machine Learning, and Telecommunications. I consider myself to be a disciplined and resilient person, always keen to learn and open to get involved in different areas.",
+    "summary": "Hello there! My name is <bold>Jacobo Jaramillo</bold>, an Electronic Engineer turned Software Developer. I went to Germany in 2017 to study a MSc. in Electrical Engineering and IT, where I fell in love. I stayed there until 2021, when I came back to my home country, Colombia. I have been working in software development in the areas of IoT, Machine Learning, and Telecommunications. I consider myself to be a disciplined and resilient person, always keen to learn and open to get involved in different areas.",
     "leisure": "In my leisure time, I'm usually playing tennis, riding my motorcycle, spending some time with my family or friends, and of course, hitting the keyboard.",
     "passion": "One of my other passions is to learn new stuff (I know, it sounds cliché). I'm usually learning something, be it tech-related, or something random such as Mongol history (I love history, BTW).",
     "extra_information": "I truly think you don't only hire a developer, but a human being. So in case you're interested, here's some extra information about me."
