--- a/locale/es.json
+++ b/locale/es.json
@@ -18,7 +18,7 @@
       "avid_learner": "Apasionado por aprender",
       "tennis_player": "Jugador de tenis"
     },
-    "summary": "Hola, mi nombre es <bold>Jacobo Jaramillo</bold> y soy un Ingeniero Electrónico convertido en Desarrollador de Software. En 2017 me fue a Alemania a estudiar Maestría en Ingeniería Eléctrica y Tecnologías de la Información, y me quedé hasta 2021, cuando regresé a Colombia. He trabajado en el desarrollo de software en las áreas de IoT, Machine Learning y Telecomunicaciones. Soy una persona disciplinada y resiliente, siempre dispuesta a aprender y abierta a involucrarme en diferentes áreas.",
+    "summary": "Hola, mi nombre es <bold>Jacobo Jaramillo</bold> y soy un Ingeniero Electrónico convertido en Desarrollador de Software. En 2017 me fue a Alemania a estudiar Maestría en Ingeniería Eléctrica y Tecnologías de la Información y me enamoré de la programación. Allá me quedé hasta 2021, cuando regresé a Colombia. He trabajado en el desarrollo de software en las áreas de IoT, Machine Learning y Telecomunicaciones. Soy una persona disciplinada y resiliente, siempre dispuesta a aprender y abierta a involucrarme en diferentes áreas.",
     "leisure": "En mi tiempo libre, suelo jugar tennis, montar en moto, pasar tiempo con mi familia y amigos, y por supuesto, crear un poco de código.",
     "passion": "Otra de mis pasiones es aprender cosas nuevas (aunque suene cliché). Normalmente estoy aprendiendo algo, ya sea relacionado con la tecnología o algo más aleatorio como la historia de los mongoles (por cierto, me encanta la historia).",
     "extra_information": "Creo sinceramente que no sólo se contrata a un desarrollador, sino a un ser humano. Así que en caso de que te interese, aquí hay alguna información extra sobre mí."
